fix(e2e): use 127.0.0.1 in Vite proxy to avoid IPv6 resolution on Node.js 22